--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Create nuget package
       run: dotnet pack Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj --output nuget-packages --configuration Release
     -name: publish to nuget.org
-      run:  dotnet nuget push Dalisama.Extensions.Configuration.Consul/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json  
+     run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
