--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,5 +23,5 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Create nuget package
       run: dotnet pack Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj --output nuget-packages --configuration Release
-    -name: publish to nuget.org
-     run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: publish to nuget
+      run: dotnet nuget push nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json 
