--- a/Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj
+++ b/Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj
@@ -15,7 +15,10 @@
     <PackageReleaseNotes>Dalisama.Extensions.Configuration.Consul</PackageReleaseNotes>
     <Title>Dalisama.Extensions.Configuration.Consul</Title>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
