--- a/Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj
+++ b/Dalisama.Extensions.Configuration.Consul/Dalisama.Extensions.Configuration.Consul.csproj
@@ -18,6 +18,7 @@
   <PropertyGroup>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Version>2.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
